css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
    box-sizing: border-box;
}

body {
    background: #080808;
    color: #fff;
}

html {
    scroll-behavior: smooth;
}

#header {
    width: 100%;
    height: 100vh;
    background-image: url(/img/bg.png);
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}

.container {
    padding: 10px 10%;
}

nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}

.logo{
    width: 100px;
    transition: ease-in 0.3s;
}

.logo:hover {
    transform: translateY(-10px);
}

nav ul li {
    display: inline-block;
    list-style: none;
    margin: 10px 20px;
}

nav ul li a {
    color: #FFDA05;
    text-decoration: none;
    font-size: 18px;
    position: relative;
}

nav ul li a::after {
    content: '';
    width: 0;
    height: 3px;
    background: #FFDA05;
    position: absolute;
    left: 0;
    bottom: -6px;
    transition: 0.3s;
}

nav ul li a:hover::after {
    width: 100%;
}

.header-text {
    margin-top: 10%;
    font-size: 30px;
}
 
.header-text h1 {
    font-size: 60px;
    margin-top: 20px;
}

.header-text h1 span {
    color: #FFDA05;
}

/* About Section */
#about {
    padding: 80px 0;
    color: #ababab;
}

.row {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.about-col-1 {
    flex-basis: 35%;
}

.about-col-1 img {
    width: 100%;
    border-radius: 6px;
}

.about-col-2 {
    flex-basis: 60%;
}

.sub-title {
    font-size: 32px;
    font-weight: 600;
    color: #fff;
}

.tab-titles {
    display: flex;
    margin: 20px 0 40px;
}

.tab-links {
    margin-right: 50px;
    font-size: 18px;
    font-weight: 500;
    cursor: pointer;
    position: relative;
}

.tab-links::after {
    content: '';
    width: 0;
    height: 3px;
    background: #FFDA05;
    position: absolute;
    left: 0;
    bottom: -8px;
    transition: 0.5s;
}

.tab-links.active-link::after {
    width: 100%;
}

.tab-contents ul li {
    list-style: none;
    margin: 10px 0;
}

.tab-contents ul li span {
    color: #FFDA05;
    font-size: 14px;
}

.tab-contents {
    display: none;
}

.tab-contents.active-tab {
    display: block;
}

.tab-contents p {
    font-size: 14px;
}

/* Services */
#services {
    background-color: #2f2f2f;
    padding: 30px 0;
}

.services-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-gap: 40px;
    margin-top: 50px;
}

.services-list a {
    color: gold;
    text-decoration: none;
}

.services-list div {
    background: #262626;
    padding: 40px;
    font-size: 13px;
    font-weight: 300;
    border-radius: 6px;
    transition: background 0.5s, transform 0.5s;
}

.services-list div i {
    font-size: 30px;
    margin-bottom: 30px;
}

.services-list div h2 {
    font-size: 30px;
    font-weight: 500;
    margin-bottom: 15px;
}

.services-list div a {
    text-decoration: none;
    font-size: 12px;
    margin-top: 20px;
    display: inline-block;
}

.services-list div:hover {
    background: #FFDA05;
    color: #080808;
    transform: translateY(-10px);
}

/* Portfolio */
#portfolio {
    padding: 50px 0;
}

.work-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-gap: 40px;
    margin-top: 50px;
}

.work {
    border-radius: 6px;
    position: relative;
    overflow: hidden;
}

.work p {
    color: #080808;
}

.work img {
    width: 100%;
    border-radius: 6px;
    display: block;
    transition: 0.5s;
}

.layer {
    width: 100%;
    height: 0;
    background: linear-gradient(rgba(0,0,0,0.6), #FFDA05 );
    border-radius: 6px;
    position: absolute;
    left: 0;
    bottom: 0;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 0 40px;
    text-align: center;
    font-size: 14px;
    transition: height 0.5s;
}

.layer h3, p {
    font-weight: 500;
    margin-bottom: 20px;
}

.work:hover img {
    transform: scale(1.05);
}

.work:hover .layer {
    color: #080808;
    height: 100%;
}


/* More projects button */
.btn {
    display: block;
    margin: 50px auto;
    width: fit-content;
    border: 1px solid #FFDA05;
    padding: 14px 50px;
    border-radius: 6px;
    text-decoration: none;
    color: #FFDA05;
    transition: background 0.5s;
}

.btn:hover {
    background: #FFDA05;
    color: #080808;
}

/* Contact */

#contact {
    background-color: #2f2f2f;
}

p a {
    color: gold;
    text-decoration: none;
}

.contact-left {
    flex-basis: 100%;
    text-align: center;
}

.contact-right {
    flex-basis: 60%;
}

.contact-left p{
    margin-top: 30px;
}

.social-icons {
    margin-top: 30px;
}

.social-icons a {
    text-decoration: none;
    font-size: 30px;
    margin-right: 15px;
    color: white;
    display: inline-block;
    transition: transform 0.3s;
}

.social-icons a:hover {
    color: gold;
    transform: translateY(-5px);
}

.btn.btn2 {
    background: #080808;
    display: block;
    margin: 50px auto;
    width: fit-content;
    border: 1px solid #FFDA05;
    padding: 14px 50px;
    border-radius: 6px;
    text-decoration: none;
    color: #FFDA05;
    transition: background 0.5s;
}

.btn.btn2:hover {
    background: #FFDA05;
    color: #080808;
}

.contact-right form {
    width: 100%;
}

form input, form textarea {
    width: 100%;
    border: 0;
    outline: none;
    background: #262626;
    padding: 15px;
    margin: 15px;
    color: gold;
    font-size: 18px;
    border-radius: 6px;
}

form .btn2 {
    padding: 14px 60px;
    font-size: 18px;
    margin-top: 20px;
    cursor: pointer;
}

.copyright {
    width: 100%;
    text-align: center;
    padding: 25px 0;
    background: #262626;
    font-weight: 300;
    margin-top: 20px;
}

.copyright i {
    color: gold;
}

/* CSS for small screens */

nav .fa-solid {
    color: gold;
    display: none;
}

#backToTopBtn {
    display: none; /* Hidden by default */
    position: fixed; /* Fixed/sticky position */
    bottom: 20px; /* Place the button at the bottom of the page */
    right: 30px; /* Place the button 30px from the right */
    z-index: 99; /* Make sure it does not overlap */
    border: none; /* Remove borders */
    outline: none; /* Remove outline */
    background-color: gold; /* Set a background color */
    color: #080808; /* Text color */
    cursor: pointer; /* Add a mouse pointer on hover */
    padding: 8px 15px; /* Some padding */
    border-radius: 4px; /* Rounded corners */
    font-size: 18px; /* Increase font size */
  }
  

@media only screen and (max-width: 600px){
    #header{
        background-image: url(../img/bg-mobile.png);
    }
    .header-text {
        margin-top: 70%;
        font-size: 16px;
    }
    .header-text h1 {
        font-size: 30px;
    }
    nav .fa-solid {
        cursor: pointer;
        display: block;
        font-size: 20px;
    }
    nav ul {
        background: #FFDA05;
        position: fixed;
        top: 0;
        right: -200px;
        width: 200px;
        height: 100vh;
        padding-top: 50px;
        z-index: 2;
        transition: right 0.3s;
    }
    nav ul li {
        display: block;
        margin: 25px;
    }
    nav ul li a {
        color: #080808;
    }
    nav ul .fa-solid {
        color: #080808;
        position: absolute;
        top: 25px;
        left: 25px;
        cursor: pointer;
    }
    .sub-title {
        font-size: 18px;
    }
    .about-col-1, .about-col-2 {
        flex-basis: 100%;
    }
    .about-col-1 {
        margin-bottom: 30px;
    }
    .about-col-2 {
        font-size: 14px;
    }
    .tab-links {
        font-size: 16px;
        margin-right: 20px;
    }
    .contact-left, .contact-right {
        flex-basis: 100%;
    }
    .copyright {
        font-size: 14px;
    }
}

